# opendraft

./: .gitignore  CITATION.cff  EVALUATION.md  OPENAI_CODEX_FUND_APPLICATION.md  README.md  llms.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
assets/: demo.webm  generate_demo_gif.py  generate_demo_gif_v2.py  generate_social_preview.py
engine/: config.py  draft_generator.py
engine/opendraft/: cli.py
engine/phases/: citations.py  compile.py  context.py  research.py
engine/prompts/06_enhance/: titlemaker.md
engine/utils/: citation_quality_filter.py  citation_validator.py  model_config.py  titlemaker.py  token_tracker.py
npm/: README.md  package.json
tendon-health/: INSTRUCTIONS.md  README.md  app.js  data.js  index.html  manifest.json  styles.css  sw.js
tests/: test_citation_validator.py  test_digest.py  test_e2e_subprocess_kill.py  test_packaging_subpackages.py
