[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opendraft"
version = "1.7.2"
description = "Open-source AI research draft generator with 19 specialized agents and verified citations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Federico De Ponte", email = "federico@opendraft.xyz"}
]
keywords = [
    "academic writing",
    "thesis generator",
    "research paper",
    "AI writing",
    "citation verification",
    "literature review",
    "multi-agent AI",
    "ChatGPT alternative",
    "dissertation",
    "open source"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://openpaper.dev"
Repository = "https://github.com/federicodeponte/opendraft"
Documentation = "https://github.com/federicodeponte/opendraft#readme"
Issues = "https://github.com/federicodeponte/opendraft/issues"
Changelog = "https://github.com/federicodeponte/opendraft/blob/master/CHANGELOG.md"

[project.optional-dependencies]
pdf = ["PyPDF2", "pdfplumber"]
dev = ["pytest", "black", "ruff"]

[tool.setuptools.packages.find]
include = ["engine*"]
namespaces = false

[tool.setuptools.package-data]
engine = ["prompts/**/*.md", "prompts/**/*.txt"]
